--- a/scss/base/_helpers.scss
+++ b/scss/base/_helpers.scss
@@ -111,7 +111,7 @@
 
 .hover-color {
   @include breakpoint(map-get($break, medium)) {
-      filter: url(#greyscale);
+    @include filter(grayscale(100%));
 
       &:hover {
         filter: none;
